# sakura-wx-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO-WINDOWS.md  TODO.md  build.sh  run.sh
.github/workflows/: ci.yml
benchmarks/: terminal_core_benchmark.cpp  tsm_render_benchmark.cpp  wx_paint_benchmark.cpp
cmake/: SakuraTerminalConfig.cmake.in
docs/: architecture.md
include/sakura/terminal/: core.h  core_c.h  factory.h  transport.h
include/sakura/wx/: config.h  terminal_ctrl.h
scripts/: aggregate_wx_paint_profiles.py  run_wx_paint_profile.sh
src/: conpty_session.cpp  conpty_session.h  main.cpp  pty_session.cpp  pty_session.h  terminal_core.cpp  terminal_core.h  terminal_transport.h  transport_factory.cpp  transport_factory.h  tsm_scroll_observer.c  tsm_scroll_observer.h
src/wx/: terminal_ctrl.cpp  terminal_renderer.cpp  terminal_renderer.h
tests/: c_core_consumer_test.c  library_consumer_test.cpp  package_consumer.cmake  pty_interrupt_test.cpp  pty_signal_test.cpp  pty_stress_test.cpp  terminal_core_test.cpp  test_terminal.h  transport_lifecycle_test.cpp  transport_smoke_test.cpp  tsm_public_api_test.c  vt_replay.cpp  wx_font_test.cpp  wx_interrupt_test.sh  wx_keyboard_test.cpp  wx_scroll_test.cpp  wx_smoke_test.sh
tests/fixtures/: basic.vtlog
tests/package_consumer/: CMakeLists.txt
